data/all_generated_tests/raw_wast_tests/nop_StackCorruption_132.wast
;; 3. **Test Description**:     Define a function that consists of `nop` instructions within nested `block` and `if` control structures. Confirm that all conditional branches execute as expected without any stack anomalies.    **Constraint**: `nop` must not alter control flow constructs.    **Reasoning**: Ensures `nop` does not interfere with structured control instructions, preserving stack integrity.

(assert_invalid
  (module 
    (func 
      (block 
        (if (i32.const 1) (then (nop)))))))